--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -12,9 +12,12 @@
     "importHelpers": true,
     "target": "es2015",
     "module": "es2020",
+    "allowJs": true,
+    "checkJs": false,
     "lib": [
       "es2018",
       "dom"
-    ]
-  }
+    ],
+  },
+
 }
